--- a/iop_client_range_sensor_fkie/package.xml
+++ b/iop_client_range_sensor_fkie/package.xml
@@ -10,14 +10,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>boost</build_depend>
-  <build_depend>iop_ocu_control_layerlib_fkie</build_depend>
+  <build_depend>iop_ocu_slavelib_fkie</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <run_depend>boost</run_depend>
   <run_depend>iop_component_fkie</run_depend>
-  <run_depend>iop_ocu_control_layerlib_fkie</run_depend>
+  <run_depend>iop_ocu_slavelib_fkie</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf2</run_depend>
