--- a/iop_client_digital_video_fkie/package.xml
+++ b/iop_client_digital_video_fkie/package.xml
@@ -10,10 +10,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>iop_ocu_slavelib_fkie</build_depend>
+  <build_depend>iop_client_visual_sensor_fkie</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>iop_component_fkie</run_depend>
   <run_depend>iop_ocu_slavelib_fkie</run_depend>
+  <run_depend>iop_client_visual_sensor_fkie</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
 
