--- a/iop_client_range_sensor_fkie/CMakeLists.txt
+++ b/iop_client_range_sensor_fkie/CMakeLists.txt
@@ -5,6 +5,8 @@ project(iop_client_range_sensor_fkie)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+                geometry_msgs
+                iop_component_fkie
                 iop_ocu_slavelib_fkie
                 roscpp
                 sensor_msgs
@@ -15,7 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## System dependencies are found with CMake's conventions
 find_package(Boost REQUIRED COMPONENTS system thread)
 
-iop_init(COMPONENT_ID 150)
+iop_init(COMPONENT_ID 0)
 
 ###################################
 ## catkin specific configuration ##
@@ -30,6 +32,8 @@ catkin_package(
     INCLUDE_DIRS include/${PROJECT_NAME}
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS
+        geometry_msgs
+        iop_component_fkie
         iop_ocu_slavelib_fkie
         sensor_msgs
         tf2
