fixed catkin_lint errors

--- a/fkie_iop_client_digital_video/CMakeLists.txt
+++ b/fkie_iop_client_digital_video/CMakeLists.txt
@@ -31,6 +31,7 @@ catkin_package(
         fkie_iop_client_visual_sensor
         fkie_iop_component
         fkie_iop_ocu_slavelib
+        roscpp
         std_msgs
 )
 
