--- a/fkie_iop_client_visual_sensor/CMakeLists.txt
+++ b/fkie_iop_client_visual_sensor/CMakeLists.txt
@@ -32,6 +32,7 @@ catkin_package(
         diagnostic_msgs
         fkie_iop_component
         fkie_iop_ocu_slavelib
+        roscpp
         std_msgs
 )
 
