--- a/fkie_iop_client_still_image/package.xml
+++ b/fkie_iop_client_still_image/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>fkie_iop_client_still_image</name>
   <version>1.1.0</version>
   <description>The client service for digital video service </description>
@@ -9,17 +9,20 @@
   <license>GPLv2</license>
   <url type="website">ttps://github.com/fkie/iop_jaus_sensing_clients</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>fkie_iop_component</depend>
   <depend>fkie_iop_client_visual_sensor</depend>
   <depend>fkie_iop_ocu_slavelib</depend>
-  <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
-    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
